# non-profit-categorization

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml  sagemaker-studio-lab-environment.yaml
.github/: pull_request_template.md
data/: .gitignore
docs/: github-onboarding.md
notebooks/: starter-notebook.ipynb
src/utility/: get_data.py
